# muniverse

./: .gitignore  LICENSE  full_requirements.txt  minimal_requirements.txt  neuromotion.yaml  neuromotion_docker.md  pyproject.toml  readme.md  scd.yaml
bids_metadata/: avrillon_et_al_2024.json  caillet_et_al_2023.json  grison_et_al_2025.json  neuromotion.json
configs/: ae.json  cbss.json  neuromotion.json  scd.json  upperbound.json
data/models/: poses.csv
docker/neuromotion/: Dockerfile  makefile
docker/scd/: Dockerfile  makefile
docs/: index.html
final_scripts/: bidsify_decomposition_results.py  decompose_recordings.py  generate_datasets.py  generate_report_cards.py
misc/: plot_utils.py  upper_bound_check.py  visualize_neuromotion_results.py
notebooks/: 01_DataGeneration.ipynb  01_LoadDatasets.ipynb  02_PreprocessData.ipynb  03_DecomposeRecordings.ipynb  analyze_results for_testing.ipynb  analyze_results for_testing_tk.ipynb  analyze_results.ipynb
scripts/: avrillon2024_to_bids.py  bidsify_decomp_results.py  caillet2023_to_bids.py  decompose_batch.py  decompose_recordings.py  decompose_recordings_up.py  evaluation_batch.py  generate_datasets.py  grison2025_to_bids.py  neuromotion_to_bids.py  process_runs.py
src/: __init__.py
src/algorithms/: __init__.py  _run_scd.py  _run_scd.sh  debug_hybrid.ipynb  decomposition.py  decomposition_methods.py  decomposition_routines.py  pre_processing.py  run_scd.sh  run_upper_bound.py  scd.py  upper_bound_decomposition.py
src/data_generation/: Dockerfile  __init__.py  _generate_recording.sh  _generate_records_hybrid.sh  _run_hybrid.py  _run_neuromotion.py  config_test.yml  generate_batch.py  generate_configs.py  generate_configs_TA.py  run.sh  (+9 more)
tests/: test_datasets.py
(+85 files in other folders)
